Updated logo and fixed minor alignment issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
 
@@ -10,44 +9,55 @@ body {
 .top {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
 }
 
 nav {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    margin-top: 10%;
-    margin-bottom: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .logo {
+    display: flex;
+    justify-content: space-evenly;
     background-color: black;
     color: white;
+    height: 50%;
+}
+
+.top {
+    display: flex;
+    justify-content: space-evenly;
+
 }
 
 .logo img {
-    width: 100%;
-    height: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 25%;
 }
 
-.intro {
+section .intro {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 section h1 {
     color: white;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 h1 {
+    font-family: 'Kanit', sans-serif;
+    font-size: 25px;
     color: white;
     text-align: center;
     height: 300px;
-    font-family: bebas;
 }
 
 .mac-image {
@@ -56,4 +66,9 @@ h1 {
     width: 100%;
     background-repeat: no-repeat;
     background-size:cover;
+}
+
+nav div {
+    font-family: 'Kanit', sans-serif;
+    font-size: 20px;
 }
